--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.4",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "recoil": "^0.7.5"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
@@ -25,5 +26,7 @@
   },
   "version": "1.0.0",
   "name": "free_app",
-  "resolutions": { "@types/react": "^17" }
+  "resolutions": {
+    "@types/react": "^17"
+  }
 }
