--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "dependencies": {
+    "@react-navigation/native": "^6.0.12",
+    "@react-navigation/native-stack": "^6.8.0",
     "expo": "^46.0.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.4",
     "react-native-web": "~0.18.7",
-    "recoil": "^0.7.5"
+    "recoil": "^0.7.5",
+    "react-native-screens": "~3.15.0",
+    "react-native-safe-area-context": "4.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
