--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@apollo/client": "^3.6.9",
+    "@expo/webpack-config": "^0.17.0",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
     "expo": "^46.0.0",
@@ -8,16 +9,18 @@
     "graphql": "^15.8.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-hook-form": "^7.36.1",
     "react-native": "0.69.4",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-web": "~0.18.7",
     "recoil": "^0.7.5",
     "styled-components": "^5.3.5",
-    "@expo/webpack-config": "^0.17.0"
+    "valtio": "^1.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@react-native-community/eslint-config": "^3.1.0",
     "@types/react": "~18.0.0",
     "@types/react-native": "~0.69.1",
@@ -25,6 +28,7 @@
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-valtio": "^0.6.0",
     "prettier": "^2.7.1",
     "typescript": "^4.6.3"
   },
