--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
     "expo": "^46.0.0",
+    "expo-linear-gradient": "~11.4.0",
     "formik": "^2.2.9",
     "graphql": "^15.8.0",
     "react": "18.0.0",
