--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "@graphql-codegen/typescript": "3.0.4",
     "@graphql-codegen/typescript-resolvers": "3.2.1",
     "@react-native-community/eslint-config": "^3.1.0",
-    "@types/react": "~18.0.0",
-    "@types/react-native": "~0.69.1",
+    
     "@types/styled-components-react-native": "^5.1.3",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "eslint": "^8.23.0",
@@ -42,12 +41,11 @@
     "typescript": "^4.6.3"
   },
   "scripts": {
-    "start-old": "expo start",
-    "start": "concurrently \"expo start\" \"yarn generate --watch\"",
+    "start": "expo start",
+    "watch": "graphql-codegen --watch",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "generate": "graphql-codegen",
     "codegen": "graphql-codegen --config codegen.ts"
   },
   "version": "1.0.0",
