--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "dependencies": {
-    "@apollo/client": "^3.6.9",
+    "@apollo/client": "^3.8.0-beta.2",
     "@expo/webpack-config": "^0.17.0",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
     "concurrently": "^8.1.0",
     "expo": "^46.0.0",
     "expo-linear-gradient": "~11.4.0",
+    "expo-secure-store": "~11.3.0",
     "formik": "^2.2.9",
     "graphql": "^15.8.0",
     "react": "18.0.0",
@@ -23,15 +24,14 @@
   "devDependencies": {
     "@babel/core": "^7.18.6",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
-    "@graphql-codegen/typed-document-node": "^4.0.1",
     "@graphql-codegen/cli": "4.0.1",
     "@graphql-codegen/client-preset": "4.0.0",
     "@graphql-codegen/introspection": "4.0.0",
     "@graphql-codegen/near-operation-file-preset": "^2.5.0",
+    "@graphql-codegen/typed-document-node": "^4.0.1",
     "@graphql-codegen/typescript": "3.0.4",
     "@graphql-codegen/typescript-resolvers": "3.2.1",
     "@react-native-community/eslint-config": "^3.1.0",
-    
     "@types/styled-components-react-native": "^5.1.3",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "eslint": "^8.23.0",
@@ -44,7 +44,8 @@
     "start": "expo start",
     "watch": "graphql-codegen --watch",
     "android": "expo start --android",
-    "ios": "expo start --ios",
+    "ios-old": "expo start --ios",
+    "ios": "expo client:install:ios",
     "web": "expo start --web",
     "codegen": "graphql-codegen --config codegen.ts"
   },
