--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "18.0.0",
     "react-hook-form": "^7.36.1",
     "react-native": "0.69.4",
+    "react-native-btr": "^2.2.0",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-web": "~0.18.7",
