--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@apollo/client": "^3.8.0-beta.2",
     "@expo/webpack-config": "^0.17.0",
+    "@hookform/resolvers": "^3.1.1",
     "@maplibre/maplibre-react-native": "^9.0.1",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
@@ -21,7 +22,8 @@
     "react-native-web": "~0.18.7",
     "recoil": "^0.7.5",
     "styled-components": "^5.3.5",
-    "valtio": "^1.7.0"
+    "valtio": "^1.7.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
