much is getting there

--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "react-dom": "18.0.0",
     "react-hook-form": "^7.36.1",
     "react-native": "0.69.4",
+    "react-native-autocomplete-dropdown": "^3.0.2",
     "react-native-autocomplete-input": "^5.3.2",
     "react-native-btr": "^2.2.0",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-svg": "^13.9.0",
     "react-native-web": "~0.18.7",
     "recoil": "^0.7.5",
     "styled-components": "^5.3.5",
@@ -35,6 +37,7 @@
     "@graphql-codegen/near-operation-file-preset": "^2.5.0",
     "@graphql-codegen/typed-document-node": "^4.0.1",
     "@graphql-codegen/typescript": "3.0.4",
+    "@graphql-codegen/typescript-operations": "^4.0.1",
     "@graphql-codegen/typescript-resolvers": "3.2.1",
     "@react-native-community/eslint-config": "^3.1.0",
     "@types/styled-components-react-native": "^5.1.3",
