--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "@maplibre/maplibre-react-native": "^9.0.1",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
+    "@types/omit-deep": "^0.3.0",
     "concurrently": "^8.1.0",
     "expo": "^46.0.0",
     "expo-linear-gradient": "~11.4.0",
     "expo-secure-store": "~11.3.0",
     "formik": "^2.2.9",
     "graphql": "^15.8.0",
+    "omit-deep": "^0.3.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-hook-form": "^7.36.1",
