--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/omit-deep": "^0.3.0",
     "concurrently": "^8.1.0",
     "expo": "^46.0.0",
+    "expo-dev-client": "~1.3.1",
     "expo-linear-gradient": "~11.4.0",
     "expo-secure-store": "~11.3.0",
     "formik": "^2.2.9",
@@ -22,6 +23,8 @@
     "react-native-autocomplete-dropdown": "^3.0.2",
     "react-native-autocomplete-input": "^5.3.2",
     "react-native-btr": "^2.2.0",
+    "react-native-gifted-charts": "^1.3.2",
+    "react-native-linear-gradient": "^2.7.3",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-svg": "^13.9.0",
@@ -29,6 +32,7 @@
     "recoil": "^0.7.5",
     "styled-components": "^5.3.5",
     "valtio": "^1.7.0",
+    "victory-native": "^36.6.11",
     "zod": "^3.21.4"
   },
   "devDependencies": {
