--- a/package.json
+++ b/package.json
@@ -1,34 +1,36 @@
 {
   "dependencies": {
     "@apollo/client": "^3.8.0-beta.2",
-    "@expo/webpack-config": "^0.17.0",
+    "@expo/webpack-config": "^18.0.1",
     "@hookform/resolvers": "^3.1.1",
     "@maplibre/maplibre-react-native": "^9.0.1",
-    "@react-native-community/datetimepicker": "6.2.0",
+    "@react-native-community/datetimepicker": "6.7.3",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
     "@types/omit-deep": "^0.3.0",
     "concurrently": "^8.1.0",
-    "expo": "^46.0.0",
-    "expo-dev-client": "~1.3.1",
-    "expo-linear-gradient": "~11.4.0",
-    "expo-secure-store": "~11.3.0",
+    "expo": "^48.0.0",
+    "expo-dev-client": "~2.2.1",
+    "expo-linear-gradient": "~12.1.2",
+    "expo-secure-store": "~12.1.1",
+    "expo-splash-screen": "~0.18.2",
+    "expo-status-bar": "~1.4.2",
     "formik": "^2.2.9",
     "graphql": "^15.8.0",
     "omit-deep": "^0.3.0",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-hook-form": "^7.36.1",
-    "react-native": "0.69.4",
+    "react-native": "0.71.8",
     "react-native-autocomplete-dropdown": "^3.0.2",
     "react-native-autocomplete-input": "^5.3.2",
     "react-native-btr": "^2.2.0",
     "react-native-gifted-charts": "^1.3.2",
     "react-native-linear-gradient": "^2.7.3",
-    "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0",
-    "react-native-svg": "^13.9.0",
-    "react-native-web": "~0.18.7",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-svg": "13.4.0",
+    "react-native-web": "~0.18.10",
     "recoil": "^0.7.5",
     "styled-components": "^5.3.5",
     "valtio": "^1.7.0",
@@ -36,7 +38,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.6",
+    "@babel/core": "^7.19.3",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@graphql-codegen/cli": "4.0.1",
     "@graphql-codegen/client-preset": "4.0.0",
@@ -53,13 +55,13 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-valtio": "^0.6.0",
     "prettier": "^2.7.1",
-    "typescript": "^4.6.3"
+    "typescript": "^4.9.4"
   },
   "scripts": {
-    "start": "expo start --port 8081",
+    "start": "expo start --dev-client",
     "watch": "graphql-codegen --watch",
-    "android": "expo start --android --port 8081",
-    "ios": "expo start --ios --port 8081",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web --port 8081",
     "codegen": "graphql-codegen --config codegen.ts"
   },
