--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-autocomplete-dropdown": "^3.0.2",
     "react-native-autocomplete-input": "^5.3.2",
     "react-native-btr": "^2.2.0",
+    "react-native-draggable-flatlist": "^4.0.1",
     "react-native-gifted-charts": "^1.3.2",
     "react-native-linear-gradient": "^2.7.3",
     "react-native-safe-area-context": "4.6.3",
