--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "react-native-autocomplete-input": "^5.3.2",
     "react-native-btr": "^2.2.0",
     "react-native-draggable-flatlist": "^4.0.1",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-gifted-charts": "^1.3.2",
     "react-native-linear-gradient": "^2.7.3",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
@@ -41,6 +43,7 @@
   "devDependencies": {
     "@babel/core": "^7.19.3",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@babel/plugin-transform-export-namespace-from": "^7.22.5",
     "@graphql-codegen/cli": "4.0.1",
     "@graphql-codegen/client-preset": "4.0.0",
     "@graphql-codegen/introspection": "4.0.0",
