--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "dependencies": {
     "@apollo/client": "^3.8.0-beta.2",
-    "@expo/webpack-config": "^18.0.1",
+    "@expo/config-plugins": "~7.2.2",
     "@hookform/resolvers": "^3.1.1",
     "@maplibre/maplibre-react-native": "^9.0.1",
     "@react-native-community/datetimepicker": "7.2.0",
-    "@react-navigation/native": "^6.0.12",
-    "@react-navigation/native-stack": "^6.8.0",
+    "@react-navigation/native": "^6.0.2",
     "@types/omit-deep": "^0.3.0",
     "concurrently": "^8.1.0",
     "expo": "^49.0.0",
+    "expo-constants": "~14.4.2",
     "expo-dev-client": "~2.4.4",
     "expo-linear-gradient": "~12.3.0",
+    "expo-linking": "~5.0.2",
+    "expo-router": "2.0.0",
     "expo-secure-store": "~12.3.1",
     "expo-splash-screen": "~0.20.4",
     "expo-status-bar": "~1.6.0",
@@ -35,7 +37,6 @@
     "react-native-svg": "13.9.0",
     "react-native-web": "~0.19.6",
     "recoil": "^0.7.5",
-    "styled-components": "^5.3.5",
     "valtio": "^1.7.0",
     "victory-native": "^36.6.11",
     "zod": "^3.21.4"
@@ -53,7 +54,7 @@
     "@graphql-codegen/typescript-operations": "^4.0.1",
     "@graphql-codegen/typescript-resolvers": "3.2.1",
     "@react-native-community/eslint-config": "^3.1.0",
-    "@types/styled-components-react-native": "^5.1.3",
+    "@types/react": "^18.2.14",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
@@ -71,6 +72,7 @@
   },
   "version": "1.0.0",
   "name": "free_app",
+  "main": "expo-router/entry",
   "resolutions": {
     "@types/react": "^17"
   }
