--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@maplibre/maplibre-react-native": "^9.0.1",
     "@react-native-community/datetimepicker": "7.2.0",
     "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native-stack": "^6.9.13",
+    "@react-navigation/stack": "^6.3.17",
     "@types/omit-deep": "^0.3.0",
     "concurrently": "^8.1.0",
     "expo": "^49.0.0",
