--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
+    "@rneui/themed": "^4.0.0-rc.7",
     "@types/omit-deep": "^0.3.0",
     "concurrently": "^8.1.0",
     "expo": "^49.0.0",
