--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@maplibre/maplibre-react-native": "^9.0.1",
     "@react-native-community/datetimepicker": "7.2.0",
     "@react-native-community/slider": "4.4.2",
+    "@react-native-picker/picker": "2.4.10",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
