--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-autocomplete-input": "^5.3.2",
     "react-native-btr": "^2.2.0",
     "react-native-draggable-flatlist": "^4.0.1",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-gifted-charts": "^1.3.2",
     "react-native-linear-gradient": "^2.7.3",
