--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "react-native-autocomplete-dropdown": "^3.0.2",
     "react-native-autocomplete-input": "^5.3.2",
     "react-native-btr": "^2.2.0",
+    "react-native-calendars": "^1.1299.0",
+    "react-native-devsettings": "^1.0.5",
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.12.0",
