--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "concurrently": "^8.1.0",
     "expo": "^49.0.0",
     "expo-av": "~13.4.1",
+    "expo-build-properties": "~0.8.3",
     "expo-constants": "~14.4.2",
-    "expo-dev-client": "~2.4.4",
+    "expo-dev-client": "~2.4.6",
     "expo-linear-gradient": "~12.3.0",
     "expo-linking": "~5.0.2",
     "expo-router": "2.0.0",
@@ -29,7 +30,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.36.1",
-    "react-native": "0.72.1",
+    "react-native": "0.72.3",
     "react-native-autocomplete-dropdown": "^3.0.2",
     "react-native-autocomplete-input": "^5.3.2",
     "react-native-btr": "^2.2.0",
@@ -74,7 +75,8 @@
     "typescript": "^5.1.3"
   },
   "scripts": {
-    "start": "expo start --dev-client",
+    "startOld": "expo start --dev-client",
+    "start": "expo start",
     "watch": "graphql-codegen --watch",
     "android": "expo run:android",
     "ios": "expo run:ios",
